tests/files/type_checker_tests/should_fail/027.cmdr
//Should fail on lesser equal when types are incompatible
x = 3 <= "3";